clusters/main/kubernetes/system/networkpolicies/app/kube-system-cilium-agent-hostnetwork.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-agent-hostnetwork
  namespace: kube-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cilium-agent
      k8s-app: cilium
  egress:
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "4240"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toCIDRSet:
        - cidr: 0.0.0.0/0
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
